SW-10879 - fixed image slider preventing scrolling on mobile IE

--- a/themes/Frontend/Responsive/frontend/_public/src/less/_components/image-slider.less
+++ b/themes/Frontend/Responsive/frontend/_public/src/less/_components/image-slider.less
@@ -91,7 +91,7 @@ It contains the viewport specific styles inside media queries.
     left: 0;
     white-space: nowrap;
     font-size: 0;
-    -ms-touch-action: none;
+    -ms-touch-action: pan-y;
 }
 
 .image-slider--item {
